--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       java: corretto17
     commands:
       - echo INSTALL DEPENDENCIES
+      - export APP_PROFILE=prod
       - sudo apt update
       - sudo mvn install
   build:
