--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       java: corretto17
     commands:
       - echo INSTALL DEPENDENCIES
-      - sudo yum update
+      - sudo yum update -y
       - sudo mvn install
   build:
     commands:
