--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 
-cors.origins=${CORS_ORIGINS:http:*}
+cors.origins=${CORS_ORIGINS:*}
 
 
 dslist.security.token.secret=${JWT_SECRET:12345678}
